--- a/index.html
+++ b/index.html
@@ -32,20 +32,28 @@
       </form>
       <div class="col-lg-9 pb-3">
         <!-- today's forecast -->
-        <section id="today" class="mt-3" role="region">
-
-        </section>
+        <div id="today" class="mt-3" role="region">
+          <h2 id="currentCityDate"></h2>
+          <p id="currentTemp"></p>
+          <p id="currentWind"></p>
+          <p id="currentHumidity"></p>
+          <p id="currentUV"></p>
+        </div>
 
         <!-- week's forecast -->
-        <section id="week" class="row mt-3" role="region" >hiya
+        <div id="week" class="row mt-3" role="region" >
           
-        </section>
+        </div>
       </div>
   </div>
 
-
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  <!-- moment.min link -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
+  <!-- bootstrap link -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
