--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
       <div class="col-lg-9 pb-3">
         <!-- today's forecast -->
         <div id="today" class="mt-3" role="region">
-          <h2 id="currentCityDate"></h2>
-          <p id="currentTemp"></p>
-          <p id="currentWind"></p>
-          <p id="currentHumidity"></p>
-          <p id="currentUV"></p>
+          <div>
+            <h2 id="currentCityDate"></h2>
+            <p id="currentTemp"></p>
+            <p id="currentWind"></p>
+            <p id="currentHumidity"></p>
+            <p id="currentUV"></p>
+          </div>
+          <div id="todayIcon">
+
+          </div>
+          
         </div>
 
         <!-- week's forecast -->
