adds search history buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row">
       <!-- search form -->
       <form class="col-lg-3 pb-3 searchForm">
-        <div class="col-auto">
+        <div class="col-auto" id="buttonRef">
           <label for="city" class="form-label">Search for a city:</label>
           <input type="text" class="form-control" id="cityInput" placeholder="Los Angeles" >
           <button type="submit" class="btn btn-info mb-3" id="submitBtn">Submit</button>
@@ -64,7 +64,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-      <script src="./script.js"></script>
+      <script src="./practice.js"></script>
 </body>
 
 </html>
